<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewHistory"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center|end"
        android:textSize="60sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center|end"
        android:text="@string/textViewHistory"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:autoSizeTextType="uniform"
        android:maxLength="16"/>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="4"
        app:rowCount="5">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAc"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/acbutton_visible"
            android:text="@string/ac"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDel"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/acbutton_visible"
            android:text="@string/del"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/operator_button"
            android:text="@string/div"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMulti"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/operator_button"
            android:text="@string/multiply"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSeven"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/seven"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEight"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/eight"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNine"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/nine"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSub"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/operator_button"
            android:text="@string/sub"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFour"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/four"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/five"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSix"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/six"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/operator_button"
            android:text="@string/add"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/one"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonTwo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/two"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/three"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/equalbutton"
            android:text="@string/equal"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowSpan="2"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDecimal"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/decimal"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonZero"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/button_visible"
            android:text="@string/zero"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1"></androidx.appcompat.widget.AppCompatButton>
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>